# actix-auth-middleware

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: coverage.yml  linux.yml
actix_auth_middleware/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Authentication.html  struct.AuthenticationMiddleware.html  trait.GetLoginRoute.html  type.IsAuthenticated.html
examples/: cookie-identity.rs
implementors/actix_service/: trait.Service.js
implementors/actix_service/transform/: trait.Transform.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs
src/actix_auth_middleware/: lib.rs.html  main.rs.html
